[gd_scene load_steps=66 format=3 uid="uid://d15ryebynytue"]

[ext_resource type="Script" path="res://Scripts/KamikazeEnemy.gd" id="1_57fow"]
[ext_resource type="AudioStream" uid="uid://bred01x2lenhb" path="res://Sound/soundfx/hurt1.wav" id="2_4exn3"]
[ext_resource type="AudioStream" uid="uid://cfkw4frr5p040" path="res://Sound/soundfx/died2.wav" id="2_x26kr"]
[ext_resource type="Texture2D" uid="uid://debusyfgdl4l6" path="res://Sprites/boom_kamikaze.png" id="4_6cnln"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhelc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_721xa"]

[sub_resource type="Animation" id="Animation_chwq6"]
resource_name = "died"
length = 0.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FX/DiedFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_pah47"]
resource_name = "exploded"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2d:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2d:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(5, 5), Vector2(12, 12)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"explode", false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_e4d8t"]
resource_name = "hurt"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FX/HurtFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tgyh"]
_data = {
"died": SubResource("Animation_chwq6"),
"exploded": SubResource("Animation_pah47"),
"hurt": SubResource("Animation_e4d8t")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_p7grp"]
radius = 34.0588

[sub_resource type="AtlasTexture" id="AtlasTexture_ssblm"]
atlas = ExtResource("4_6cnln")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xeyi"]
atlas = ExtResource("4_6cnln")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lxu1"]
atlas = ExtResource("4_6cnln")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlv5a"]
atlas = ExtResource("4_6cnln")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghl65"]
atlas = ExtResource("4_6cnln")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_grum8"]
atlas = ExtResource("4_6cnln")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd3go"]
atlas = ExtResource("4_6cnln")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmnb6"]
atlas = ExtResource("4_6cnln")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt86n"]
atlas = ExtResource("4_6cnln")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l41d1"]
atlas = ExtResource("4_6cnln")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtyeq"]
atlas = ExtResource("4_6cnln")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a43be"]
atlas = ExtResource("4_6cnln")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lyyf"]
atlas = ExtResource("4_6cnln")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnl5c"]
atlas = ExtResource("4_6cnln")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u106"]
atlas = ExtResource("4_6cnln")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw5hg"]
atlas = ExtResource("4_6cnln")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdi5p"]
atlas = ExtResource("4_6cnln")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrdwr"]
atlas = ExtResource("4_6cnln")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh38g"]
atlas = ExtResource("4_6cnln")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7gst"]
atlas = ExtResource("4_6cnln")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smkvy"]
atlas = ExtResource("4_6cnln")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b81ui"]
atlas = ExtResource("4_6cnln")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkujf"]
atlas = ExtResource("4_6cnln")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5og4f"]
atlas = ExtResource("4_6cnln")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kta6w"]
atlas = ExtResource("4_6cnln")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy1ix"]
atlas = ExtResource("4_6cnln")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv1aq"]
atlas = ExtResource("4_6cnln")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ypoo"]
atlas = ExtResource("4_6cnln")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5b5g"]
atlas = ExtResource("4_6cnln")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_12sh1"]
atlas = ExtResource("4_6cnln")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s01i6"]
atlas = ExtResource("4_6cnln")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yolbc"]
atlas = ExtResource("4_6cnln")
region = Rect2(336, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnsh8"]
atlas = ExtResource("4_6cnln")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlovr"]
atlas = ExtResource("4_6cnln")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga1pv"]
atlas = ExtResource("4_6cnln")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_83j54"]
atlas = ExtResource("4_6cnln")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr0p1"]
atlas = ExtResource("4_6cnln")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1afum"]
atlas = ExtResource("4_6cnln")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgab3"]
atlas = ExtResource("4_6cnln")
region = Rect2(288, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_20s8w"]
atlas = ExtResource("4_6cnln")
region = Rect2(336, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_340mg"]
atlas = ExtResource("4_6cnln")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydm6l"]
atlas = ExtResource("4_6cnln")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_igk06"]
atlas = ExtResource("4_6cnln")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5232m"]
atlas = ExtResource("4_6cnln")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwckd"]
atlas = ExtResource("4_6cnln")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf2s1"]
atlas = ExtResource("4_6cnln")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_05w7e"]
atlas = ExtResource("4_6cnln")
region = Rect2(288, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntc6q"]
atlas = ExtResource("4_6cnln")
region = Rect2(336, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pswl3"]
atlas = ExtResource("4_6cnln")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx662"]
atlas = ExtResource("4_6cnln")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd2p4"]
atlas = ExtResource("4_6cnln")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0fwf"]
atlas = ExtResource("4_6cnln")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q14wu"]
atlas = ExtResource("4_6cnln")
region = Rect2(192, 288, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_8fb1y"]
animations = [{
"frames": [SubResource("AtlasTexture_ssblm"), SubResource("AtlasTexture_0xeyi"), SubResource("AtlasTexture_5lxu1"), SubResource("AtlasTexture_wlv5a"), SubResource("AtlasTexture_ghl65"), SubResource("AtlasTexture_grum8"), SubResource("AtlasTexture_fd3go"), SubResource("AtlasTexture_xmnb6"), SubResource("AtlasTexture_kt86n"), SubResource("AtlasTexture_l41d1"), SubResource("AtlasTexture_dtyeq"), SubResource("AtlasTexture_a43be"), SubResource("AtlasTexture_5lyyf"), SubResource("AtlasTexture_dnl5c"), SubResource("AtlasTexture_5u106"), SubResource("AtlasTexture_tw5hg"), SubResource("AtlasTexture_cdi5p"), SubResource("AtlasTexture_xrdwr"), SubResource("AtlasTexture_rh38g"), SubResource("AtlasTexture_g7gst"), SubResource("AtlasTexture_smkvy"), SubResource("AtlasTexture_b81ui"), SubResource("AtlasTexture_pkujf"), SubResource("AtlasTexture_5og4f"), SubResource("AtlasTexture_kta6w"), SubResource("AtlasTexture_oy1ix"), SubResource("AtlasTexture_hv1aq"), SubResource("AtlasTexture_1ypoo"), SubResource("AtlasTexture_d5b5g"), SubResource("AtlasTexture_12sh1"), SubResource("AtlasTexture_s01i6"), SubResource("AtlasTexture_yolbc"), SubResource("AtlasTexture_nnsh8"), SubResource("AtlasTexture_hlovr"), SubResource("AtlasTexture_ga1pv"), SubResource("AtlasTexture_83j54"), SubResource("AtlasTexture_pr0p1"), SubResource("AtlasTexture_1afum"), SubResource("AtlasTexture_kgab3"), SubResource("AtlasTexture_20s8w"), SubResource("AtlasTexture_340mg"), SubResource("AtlasTexture_ydm6l"), SubResource("AtlasTexture_igk06"), SubResource("AtlasTexture_5232m"), SubResource("AtlasTexture_pwckd"), SubResource("AtlasTexture_gf2s1"), SubResource("AtlasTexture_05w7e"), SubResource("AtlasTexture_ntc6q"), SubResource("AtlasTexture_pswl3"), SubResource("AtlasTexture_hx662"), SubResource("AtlasTexture_cd2p4"), SubResource("AtlasTexture_e0fwf"), SubResource("AtlasTexture_q14wu")],
"loop": true,
"name": &"explode",
"speed": 72.0
}]

[node name="KamizekazeEnemy" type="CharacterBody2D"]
script = ExtResource("1_57fow")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hhelc")

[node name="Polygon2d" type="Polygon2D" parent="."]
position = Vector2(-4.76837e-07, 10)
scale = Vector2(5, 5)
color = Color(0.917647, 0.215686, 0.0862745, 1)
polygon = PackedVector2Array(-2, 0, -2, -4, 2, -4, 2, 0)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2d" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_721xa")

[node name="NavigationAgent2d" type="NavigationAgent2D" parent="."]

[node name="FindPlayerTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5tgyh")
}

[node name="FX" type="Node2D" parent="."]

[node name="HurtFX" type="AudioStreamPlayer2D" parent="FX"]
stream = ExtResource("2_4exn3")

[node name="DiedFX" type="AudioStreamPlayer2D" parent="FX"]
stream = ExtResource("2_x26kr")

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2d" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_p7grp")

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
frames = SubResource("SpriteFrames_8fb1y")
animation = &"explode"

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="FindPlayerTimer" to="." method="_update_pathfinding"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_body_entered_explosion_radius"]
[connection signal="body_exited" from="ExplosionArea" to="." method="_on_explosion_area_body_exited"]
